Updated package infrastructure, added tox

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
 name = extension-helpers
-version = 4.0.dev
 provides = extension_helpers
 author = The Astropy Developers
 author_email = astropy.team@gmail.com
@@ -30,6 +29,7 @@ packages = find:
 extension_helpers = src/compiler.c
 
 [options.extras_require]
+test = pytest-astropy
 docs = sphinx-astropy
 
 [tool:pytest]
