--- a/tox.ini
+++ b/tox.ini
@@ -37,4 +37,4 @@ commands =
 skip_install = true
 description = invoke pycodestyle on package code
 deps = pycodestyle
-commands = pycodestyle extension_helpers
+commands = pycodestyle extension_helpers --max-line-length=100
