--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,12 @@ packages = find:
 extension_helpers = src/compiler.c
 
 [options.extras_require]
-test = pytest-astropy
-docs = sphinx-astropy
+test =
+    pytest-astropy
+    pytest-cov
+    coverage<5
+docs =
+    sphinx-astropy
 
 [tool:pytest]
 norecursedirs =
