--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{36,37,38}-test
+    py{36,37,38}-test{,-conda}
     build_docs
     pycodestyle
 requires =
@@ -9,28 +9,37 @@ requires =
 isolated_build = true
 
 [testenv]
-passenv =
-    HOME
-    WINDIR
-    LC_ALL
-    LC_CTYPE
-    CC
-    CFLAGS
+setenv =
+    osxgcc: CC=gcc
+    osxclang: CC=clang-4.0
+    linuxgcc: CC=x86_64-conda_cos6-linux-gnu-gcc
 changedir =
     test: .tmp/{envname}
     build_docs: docs
+whitelist_externals =
+    dev: bash
 description =
     test: run tests with pytest
     build_docs: invoke sphinx-build to build the HTML docs
     all: run tests with all optional dependencies
     dev: run tests with numpy and astropy dev versions
+conda_deps =
+    osxgcc: gcc
+    osxclang: clang_osx-64
+    osxclang: llvm-openmp
+    linuxgcc: gcc_linux-64
+conda_channels =
+    osxgcc: conda-forge
 extras =
     test: test
     build_docs: docs
     all: all
 commands =
-    test: python -c 'import extension_helpers; print(extension_helpers.__version__)'
-    test: pytest --pyargs extension_helpers {toxinidir}/docs {posargs}
+    dev: bash -ec "rm -rf setuptools_repo; git clone https://github.com/pypa/setuptools.git setuptools_repo && cd setuptools_repo && python bootstrap.py"
+    dev: pip install setuptools_repo/ --no-build-isolation
+    pip freeze
+    test: python -c 'import setuptools; print(setuptools.__version__)'
+    test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers {posargs}
     build_docs: sphinx-build -W -b html . _build/html {posargs}
 
 [testenv:pycodestyle]
