--- a/setup.cfg
+++ b/setup.cfg
@@ -41,3 +41,14 @@ norecursedirs =
     .tox
     extension_helpers/tests/package_template
 python_functions = test_
+
+[isort]
+line_length = 100
+sections = FUTURE,STDLIB,THIRDPARTY,NUMPY,FIRSTPARTY,LOCALFOLDER
+default_section = THIRDPARTY
+known_first_party = extension_helpers
+known_numpy = numpy
+multi_line_output = 0
+balanced_wrapping = True
+include_trailing_comma = false
+length_sort_stdlib = true
