Add isort to tox and rename style checks environment

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
     coverage: codecov
     envs:
     # Code style
-    - linux: pycodestyle
+    - linux: style
     # Standard tests
     - linux: py36-test
     - linux: py37-test
