--- a/tox.ini
+++ b/tox.ini
@@ -42,8 +42,12 @@ commands =
     test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers {posargs}
     build_docs: sphinx-build -W -b html . _build/html {posargs}
 
-[testenv:pycodestyle]
+[testenv:style]
 skip_install = true
-description = invoke pycodestyle on package code
-deps = pycodestyle
-commands = pycodestyle extension_helpers --max-line-length=100
+description = invoke pycodestyle and isort on package code
+deps =
+    pycodestyle
+    isort
+commands =
+    pycodestyle extension_helpers --max-line-length=100
+    isort -c -rc extension_helpers
