--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ commands =
     pip freeze
     test: python -c 'import setuptools; print(setuptools.__version__)'
     test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers {posargs}
-    build_docs: sphinx-build -W -b html . _build/html {posargs}
+    build_docs: sphinx-build -W -b html . _build/html
 
 [testenv:style]
 skip_install = true
