--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = astropy.team@gmail.com
 license = BSD 3-Clause License
 license_file = LICENSE.rst
 url = https://github.com/astropy/astropy-helpers
-description = Utilities for building and installing packages in the Astropy ecosystem
+description = Utilities for building and installing packages with compiled extensions
 long_description = file: README.rst
 classifiers =
     Development Status :: 5 - Production/Stable
