--- a/setup.cfg
+++ b/setup.cfg
@@ -24,17 +24,20 @@ classifiers =
 zip_safe = False
 python_requires = >=3.6
 packages = find:
+install_requires =
+    setuptools
 
 [options.package_data]
 extension_helpers = src/compiler.c
 
 [options.extras_require]
 test =
-    pytest-astropy
+    pytest
     pytest-cov
     coverage<5
 docs =
-    sphinx-astropy
+    sphinx
+    sphinx-automodapi
 
 [tool:pytest]
 norecursedirs =
