Removed/fixed mentions of astropy

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ description =
     test: run tests with pytest
     build_docs: invoke sphinx-build to build the HTML docs
     all: run tests with all optional dependencies
-    dev: run tests with numpy and astropy dev versions
+    dev: run tests with setuptools dev versions
 conda_deps =
     osxgcc: gcc
     osxclang: clang_osx-64
