--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ isolated_build = true
 [testenv]
 setenv =
     osxgcc: CC=gcc
-    osxclang: CC=clang-4.0
+    osxclang: CC=clang-10.0
     linuxgcc: CC=x86_64-conda_cos6-linux-gnu-gcc
 changedir =
     test: .tmp/{envname}
@@ -25,7 +25,7 @@ description =
     dev: run tests with setuptools dev versions
 conda_deps =
     osxgcc: gcc
-    osxclang: clang_osx-64
+    osxclang: clang_osx-64==10
     osxclang: llvm-openmp
     linuxgcc: gcc_linux-64
 conda_channels =
