Try setting CONDA_BUILD_SYSROOT

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ isolated_build = true
 
 [testenv]
 setenv =
+    conda: CONDA_BUILD_SYSROOT=/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk
     osxgcc: CC=gcc
     osxclang: CC=clang-10
     linuxgcc: CC=x86_64-conda_cos6-linux-gnu-gcc
