--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,9 @@ requires =
 isolated_build = true
 
 [testenv]
+passenv =
+    CONDA_BUILD_SYSROOT
 setenv =
-    conda: CONDA_BUILD_SYSROOT=/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk
     osxclang: CC=clang-10
     linuxgcc: CC=x86_64-conda_cos6-linux-gnu-gcc
 changedir =
