Fix running the tests with coverage>=5.
Also set the minimum version to 4.0, since currently nothing less than
this will work.

Fixes #24.

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ extension_helpers = src/compiler.c
 test =
     pytest
     pytest-cov
-    coverage<5
+    coverage>=4
 docs =
     sphinx
     sphinx-automodapi
