--- a/tox.ini
+++ b/tox.ini
@@ -48,4 +48,4 @@ deps =
     isort
 commands =
     pycodestyle extension_helpers --max-line-length=100
-    isort -c -rc extension_helpers
+    isort -c extension_helpers
