--- a/setup.cfg
+++ b/setup.cfg
@@ -54,4 +54,5 @@ known_numpy = numpy
 multi_line_output = 0
 balanced_wrapping = True
 include_trailing_comma = false
-length_sort_stdlib = true
+length_sort = False
+length_sort_sections=stdlib
