I dun wanna fix, so just remove

--- a/tox.ini
+++ b/tox.ini
@@ -42,10 +42,8 @@ commands =
 
 [testenv:style]
 skip_install = true
-description = invoke pycodestyle and isort on package code
+description = invoke pycodestyle on package code
 deps =
     pycodestyle
-    isort
 commands =
     pycodestyle extension_helpers --max-line-length=100
-    isort -c -rc extension_helpers
