And thou shalt remove your setup.py files and cast them out

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,10 @@ install_requires =
 [options.package_data]
 extension_helpers = src/compiler.c
 
+[options.entry_points]
+setuptools.finalize_distribution_options =
+    extension_helpers_get_extensions = extension_helpers:_finalize_distribution_hook
+
 [options.extras_require]
 test =
     pytest
