--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{36,37,38}-test{,-conda}
+    py{36,37,38,39,310}-test{,-conda}
     build_docs
     pycodestyle
 requires =
@@ -39,6 +39,17 @@ commands =
     test: python -c 'import setuptools; print(setuptools.__version__)'
     test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers {posargs}
     build_docs: sphinx-build -W -b html . _build/html
+
+[testenv:downstream]
+changedir = test: .tmp/downstream
+commands =
+    pip install setuptools setuptools_scm wheel cython==0.29.22 jinja2==2.10.3 numpy
+    pip install --no-build-isolation git+https://github.com/astropy/astropy
+    pip install pytest-astropy
+    pytest --pyargs astropy
+    pip install --no-build-isolation git+https://github.com/sunpy/sunpy
+    pip install matplotlib scipy requests beautifulsoup4 lxml zeep drms h5netcdf mpl_animators asdf scikit-image sqlalchemy
+    pytest --pyargs sunpy
 
 [testenv:style]
 skip_install = true
