Use Python 3.9 for downstream testing and fix installation of dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -42,13 +42,12 @@ commands =
 
 [testenv:downstream]
 changedir = test: .tmp/downstream
+basepython = python3.9
 commands =
     pip install setuptools setuptools_scm wheel cython==0.29.22 jinja2==2.10.3 numpy
-    pip install --no-build-isolation git+https://github.com/astropy/astropy
-    pip install pytest-astropy
+    pip install --no-build-isolation "git+https://github.com/astropy/astropy#egg=astropy[test]"
     pytest --pyargs astropy
-    pip install --no-build-isolation git+https://github.com/sunpy/sunpy
-    pip install matplotlib scipy requests beautifulsoup4 lxml zeep drms h5netcdf mpl_animators asdf scikit-image sqlalchemy
+    pip install --no-build-isolation "git+https://github.com/sunpy/sunpy#egg=sunpy[all,tests]"
     pytest --pyargs sunpy
 
 [testenv:style]
