--- a/tox.ini
+++ b/tox.ini
@@ -40,9 +40,8 @@ commands =
     test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers {posargs}
     build_docs: sphinx-build -W -b html . _build/html
 
-[testenv:downstream]
+[testenv:py39-downstream]
 changedir = test: .tmp/downstream
-basepython = python3.9
 commands =
     pip install setuptools setuptools_scm wheel cython==0.29.22 jinja2==2.10.3 numpy
     pip install --no-build-isolation "git+https://github.com/astropy/astropy#egg=astropy[test]"
