Declare minimum version of setuptools and setuptools_scm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools",
-            "setuptools_scm",
+requires = ["setuptools>=43.0.0",
+            "setuptools_scm>=6.2",
             "wheel"]
 build-backend = 'setuptools.build_meta'
 
