--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,9 @@ description =
     build_docs: invoke sphinx-build to build the HTML docs
     all: run tests with all optional dependencies
     dev: run tests with setuptools dev versions
+    oldestdeps: run tests with oldest supported version of setuptools
+deps =
+    oldestdeps: setuptools==42.0
 conda_deps =
     osxclang: clang_osx-64==10
     osxclang: llvm-openmp
