--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ zip_safe = False
 python_requires = >=3.6
 packages = find:
 install_requires =
-    setuptools
+    setuptools>=40.2
 
 [options.package_data]
 extension_helpers = src/compiler.c
