Move coverage configuration to setup.cfg

--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ commands =
     dev: pip install setuptools_repo/ --no-build-isolation
     pip freeze
     test: python -c 'import setuptools; print(setuptools.__version__)'
-    test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers {posargs}
+    test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers --cov-config={toxinidir}/setup.cfg {posargs}
     build_docs: sphinx-build -W -b html . _build/html
 
 [testenv:py39-downstream]
