Try getting gcc from conda-forge on Linux

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ passenv =
     CONDA_BUILD_SYSROOT
 setenv =
     osxclang: CC=clang-10
-    linuxgcc: CC=x86_64-conda_cos6-linux-gnu-gcc
+    linuxgcc: CC=gcc_linux-64
 changedir =
     test: .tmp/{envname}
     build_docs: docs
@@ -31,6 +31,8 @@ conda_deps =
     osxclang: clang_osx-64==10
     osxclang: llvm-openmp
     linuxgcc: gcc_linux-64
+conda_channels =
+    linuxgcc: conda-forge
 extras =
     test: test
     build_docs: docs
