--- a/tox.ini
+++ b/tox.ini
@@ -38,8 +38,7 @@ extras =
     build_docs: docs
     all: all
 commands =
-    dev: bash -ec "rm -rf setuptools_repo; git clone https://github.com/pypa/setuptools.git setuptools_repo && cd setuptools_repo && python bootstrap.py"
-    dev: pip install setuptools_repo/ --no-build-isolation
+    dev: pip install git+https://github.com/pypa/setuptools.git
     pip freeze
     test: python -c 'import setuptools; print(setuptools.__version__)'
     test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers --cov-config={toxinidir}/setup.cfg {posargs}
