Fix workflow filename

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
 jobs:
 
   test:
-    uses: ConorMacBride/github-actions-workflows/.github/workflows/publish.yml@initial-tox
+    uses: ConorMacBride/github-actions-workflows/.github/workflows/tox.yml@initial-tox
     with:
       posargs: --openmp-expected=True
       coverage: codecov
