Don't pin jinja2

--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,7 @@ commands =
 [testenv:py39-downstream]
 changedir = test: .tmp/downstream
 commands =
-    pip install setuptools setuptools_scm wheel cython==0.29.22 jinja2==2.10.3 numpy
+    pip install setuptools setuptools_scm wheel cython==0.29.2 numpy
     pip install --no-build-isolation "git+https://github.com/astropy/astropy#egg=astropy[test]"
     pytest --pyargs astropy
     pip install --no-build-isolation "git+https://github.com/sunpy/sunpy#egg=sunpy[all,tests]"
