Fix code style and test dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ setuptools.finalize_distribution_options =
 
 [options.extras_require]
 test =
+    wheel
     pytest
     pytest-cov
     coverage>=4
