--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ python_requires = >=3.7
 packages = find:
 install_requires =
     setuptools>=40.2
+    tomli>=1.0.0
 
 [options.package_data]
 extension_helpers = src/compiler.c
