Attempt to fix some CI issues

--- a/tox.ini
+++ b/tox.ini
@@ -48,9 +48,9 @@ commands =
 changedir = test: .tmp/downstream
 commands =
     pip install setuptools setuptools_scm wheel cython numpy
-    pip install --no-build-isolation "git+https://github.com/astropy/astropy#egg=astropy[test]"
+    pip install --no-build-isolation "astropy[test]@git+https://github.com/astropy/astropy.git@main"
     pytest --pyargs astropy -m "not hypothesis"
-    pip install --no-build-isolation "git+https://github.com/sunpy/sunpy#egg=sunpy[all,tests]"
+    pip install --no-build-isolation "sunpy[all,tests]@git+https://github.com/sunpy/sunpy.git"
     pytest --pyargs sunpy
 
 [testenv:style]
