--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ provides = extension_helpers
 author = The Astropy Developers
 author_email = astropy.team@gmail.com
 license = BSD 3-Clause License
-license_file = LICENSE.rst
+license_files = LICENSE.rst
 url = https://github.com/astropy/extension-helpers
 description = Utilities for building and installing packages with compiled extensions
 long_description = file: README.rst
