Added pre-commit configuration without black and run to fix issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,17 +51,8 @@ norecursedirs =
     extension_helpers/tests/package_template
 python_functions = test_
 
-[isort]
-line_length = 100
-sections = FUTURE,STDLIB,THIRDPARTY,NUMPY,FIRSTPARTY,LOCALFOLDER
-default_section = THIRDPARTY
-known_first_party = extension_helpers
-known_numpy = numpy
-multi_line_output = 0
-balanced_wrapping = True
-include_trailing_comma = false
-length_sort = False
-length_sort_sections=stdlib
+[flake8]
+max-line-length = 100
 
 [coverage:run]
 omit =
