--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,7 @@ commands =
     pip install --no-build-isolation "astropy[test]@git+https://github.com/astropy/astropy.git@main"
     pytest --pyargs astropy -m "not hypothesis"
     pip install --no-build-isolation "sunpy[all,tests]@git+https://github.com/sunpy/sunpy.git"
+    pip freeze
     pytest --pyargs sunpy
 
 [testenv:style]
