--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,20 @@ build-backend = 'setuptools.build_meta'
 
 [tool.setuptools_scm]
 write_to = "extension_helpers/version.py"
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+extend_skip_glob = [
+    "docs/*",
+    "setup.py"]
+line_length = 100
+known_third_party = ["astropy"]
+known_first_party = ["reproject"]
+group_by_package = true
+indented_import_headings = false
+length_sort_sections = ["future", "stdlib"]
+
+[tool.black]
+line-length = 100
+target-version = ['py38']
