Update tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -56,10 +56,8 @@ commands =
 
 [testenv:style]
 skip_install = true
-description = invoke pycodestyle and isort on package code
 deps =
-    pycodestyle
-    isort
+    pre-commit
 commands =
-    pycodestyle extension_helpers --max-line-length=100
-    isort -c extension_helpers
+    pre-commit install-hooks
+    pre-commit run --color always --all-files --show-diff-on-failure
