Set testpaths to avoid picking up other tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,10 +46,7 @@ docs =
     sphinx-automodapi
 
 [tool:pytest]
-norecursedirs =
-    .tox
-    extension_helpers/tests/package_template
-python_functions = test_
+testpaths = "extension_helpers" "docs"
 
 [flake8]
 max-line-length = 100
