Skip a failing sunpy test for now as it is unrelated

--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ commands =
     pytest --pyargs astropy -m "not hypothesis"
     pip install --no-build-isolation "sunpy[all,tests]@git+https://github.com/sunpy/sunpy.git"
     pip freeze
-    pytest --pyargs sunpy
+    pytest --pyargs sunpy -k "not test_saveframe and not test_hpc_observer_version and not test_hcc_observer_version"
 
 [testenv:style]
 skip_install = true
