--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ commands =
     dev: pip install git+https://github.com/pypa/setuptools.git
     pip freeze
     test: python -c 'import setuptools; print(setuptools.__version__)'
-    test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers --cov-config={toxinidir}/setup.cfg {posargs}
+    test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers --cov-config={toxinidir}/pyproject.toml {posargs}
     build_docs: sphinx-build -W -b html . _build/html
 
 [testenv:py39-downstream]
