--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,8 @@
 [tox]
 envlist =
-    py{36,37,38,39,310}-test{,-conda}
+    py{38,39,310,311,312}-test{,-conda}{,-devdeps}
     build_docs
-    pycodestyle
-requires =
-    setuptools >= 30.3.0
-    pip >= 19.3.1
-isolated_build = true
+    style
 
 [testenv]
 passenv =
@@ -18,12 +14,12 @@ changedir =
     test: .tmp/{envname}
     build_docs: docs
 whitelist_externals =
-    dev: bash
+    devdeps: bash
 description =
     test: run tests with pytest
     build_docs: invoke sphinx-build to build the HTML docs
     all: run tests with all optional dependencies
-    dev: run tests with setuptools dev versions
+    devdeps: run tests with developer versions of setuptools
     oldestdeps: run tests with oldest supported version of setuptools
 deps =
     oldestdeps: setuptools==42.0
@@ -38,19 +34,19 @@ extras =
     build_docs: docs
     all: all
 commands =
-    dev: pip install git+https://github.com/pypa/setuptools.git
+    devdeps: pip install git+https://github.com/pypa/setuptools.git
     pip freeze
     test: python -c 'import setuptools; print(setuptools.__version__)'
     test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers --cov-config={toxinidir}/pyproject.toml {posargs}
     build_docs: sphinx-build -W -b html . _build/html
 
-[testenv:py39-downstream]
-changedir = test: .tmp/downstream
+[testenv:py{38,39,310,311,312}-downstream]
+changedir = .tmp/downstream
 commands =
     pip install setuptools setuptools_scm wheel cython numpy
-    pip install --no-build-isolation "astropy[test]@git+https://github.com/astropy/astropy.git@main"
+    pip install --no-build-isolation "astropy[test] @ git+https://github.com/astropy/astropy.git"
     pytest --pyargs astropy -m "not hypothesis" -Wdefault
-    pip install --no-build-isolation "sunpy[all,tests]@git+https://github.com/sunpy/sunpy.git"
+    pip install --no-build-isolation "sunpy[all,tests] @ git+https://github.com/sunpy/sunpy.git"
     pip freeze
     pytest --pyargs sunpy -k "not test_saveframe and not test_hpc_observer_version and not test_hcc_observer_version" -Wdefault
 
