--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ python_requires = >=3.7
 packages = find:
 install_requires =
     setuptools>=40.2
-    tomli>=1.0.0
+    tomli>=1.0.0 ; python_version < '3.11'
 
 [options.package_data]
 extension_helpers = src/compiler.c
