TST: override warning filter with default setting in downstream tests

--- a/tox.ini
+++ b/tox.ini
@@ -49,10 +49,10 @@ changedir = test: .tmp/downstream
 commands =
     pip install setuptools setuptools_scm wheel cython numpy
     pip install --no-build-isolation "astropy[test]@git+https://github.com/astropy/astropy.git@main"
-    pytest --pyargs astropy -m "not hypothesis"
+    pytest --pyargs astropy -m "not hypothesis" -Wdefault
     pip install --no-build-isolation "sunpy[all,tests]@git+https://github.com/sunpy/sunpy.git"
     pip freeze
-    pytest --pyargs sunpy -k "not test_saveframe and not test_hpc_observer_version and not test_hcc_observer_version"
+    pytest --pyargs sunpy -k "not test_saveframe and not test_hpc_observer_version and not test_hcc_observer_version" -Wdefault
 
 [testenv:style]
 skip_install = true
