Updated tox environment list

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py{38,39,310,311,312}-test{,-conda}{,-devdeps}
-    build_docs
+    py{38,39,310,311,312}-test{,-conda}{,-devdeps}{,-osxclang,-linuxgcc}
+    py{38,39,310,311,312}-downstream
     style
 
 [testenv]
