--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{38,39,310,311,312}-test{,-conda}{,-devdeps}{,-osxclang,-linuxgcc}
+    py{38,39,310,311,312}-test{,-osxclang,-linuxgcc}{,-conda}{,-devdeps}
     py{38,39,310,311,312}-downstream
     style
 
