--- a/tox.ini
+++ b/tox.ini
@@ -6,23 +6,21 @@ envlist =
 
 [testenv]
 passenv =
-    CONDA_BUILD_SYSROOT
+    CONDA_BUILD_SYSROOT,CI
 setenv =
     osxclang: CC=clang-10
     linuxgcc: CC=gcc_linux-64
 changedir =
     test: .tmp/{envname}
-    build_docs: docs
 whitelist_externals =
     devdeps: bash
 description =
     test: run tests with pytest
-    build_docs: invoke sphinx-build to build the HTML docs
-    all: run tests with all optional dependencies
     devdeps: run tests with developer versions of setuptools
     oldestdeps: run tests with oldest supported version of setuptools
 deps =
     oldestdeps: setuptools==42.0
+    devdeps: git+https://github.com/pypa/setuptools.git
 conda_deps =
     osxclang: clang_osx-64==10
     osxclang: llvm-openmp
@@ -31,14 +29,10 @@ conda_channels =
     linuxgcc: conda-forge
 extras =
     test: test
-    build_docs: docs
-    all: all
 commands =
-    devdeps: pip install git+https://github.com/pypa/setuptools.git
     pip freeze
     test: python -c 'import setuptools; print(setuptools.__version__)'
     test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers --cov-config={toxinidir}/pyproject.toml {posargs}
-    build_docs: sphinx-build -W -b html . _build/html
 
 [testenv:py{38,39,310,311,312}-downstream]
 changedir = .tmp/downstream
