--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,9 @@ envlist =
     py{38,39,310,311,312}-downstream
     style
 
+# conda jobs need this because it is pulling in tox 3, not 4
+isolated_build = true
+
 [testenv]
 passenv =
     CONDA_BUILD_SYSROOT,CI
