--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ commands =
     pytest --pyargs astropy -m "not hypothesis" -Wdefault
     pip install --no-build-isolation "sunpy[all,tests] @ git+https://github.com/sunpy/sunpy.git"
     pip freeze
-    pytest --pyargs sunpy -k "not test_saveframe and not test_hpc_observer_version and not test_hcc_observer_version" -Wdefault
+    pytest --pyargs sunpy -k "not test_saveframe and not test_hpc_observer_version and not test_hcc_observer_version and not test_simple_write_compressed_difftypeinst" -Wdefault
 
 [testenv:style]
 skip_install = true
