--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,12 @@ jobs:
         - linux: py310-test
         - linux: py311-test
         - linux: py312-test
+        - linux: py313-test
         - linux: py312-test-devdeps
 
         - macos: py312-test-devdeps
           posargs: --openmp-expected=False
+        - macos: py313-test
 
         - windows: py38-test
           runs-on: windows-2019
