--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py{38,39,310,311,312}-test{,-osxclang,-linuxgcc}{,-conda}{,-devdeps}
-    py{38,39,310,311,312}-downstream
+    py{310,311,312,313}-test{,-osxclang,-linuxgcc}{,-conda}{,-devdeps}
+    py{310,311,312,313}-downstream
     style
 
 # conda jobs need this because it is pulling in tox 3, not 4
@@ -11,7 +11,7 @@ isolated_build = true
 passenv =
     CONDA_BUILD_SYSROOT,CI
 setenv =
-    osxclang: CC=clang-10
+    osxclang: CC=clang-20
     linuxgcc: CC=gcc_linux-64
 changedir =
     test: .tmp/{envname}
@@ -22,10 +22,10 @@ description =
     devdeps: run tests with developer versions of setuptools
     oldestdeps: run tests with oldest supported version of setuptools
 deps =
-    oldestdeps: setuptools==42.0
+    oldestdeps: setuptools==64
     devdeps: git+https://github.com/pypa/setuptools.git
 conda_deps =
-    osxclang: clang_osx-64==10
+    osxclang: clang-20
     osxclang: llvm-openmp
     linuxgcc: gcc_linux-64
 conda_channels =
@@ -37,7 +37,7 @@ commands =
     test: python -c 'import setuptools; print(setuptools.__version__)'
     test: pytest --pyargs extension_helpers {toxinidir}/docs --cov extension_helpers --cov-config={toxinidir}/pyproject.toml {posargs}
 
-[testenv:py{38,39,310,311,312}-downstream]
+[testenv:py{310,311,312,313}-downstream]
 changedir = .tmp/downstream
 commands =
     pip install setuptools setuptools_scm wheel cython numpy
