--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
+    "runtime-introspect>=0.3.0,<0.4.0",
     "setuptools>=64",
     "tomli>=1.0.0 ; python_version < '3.11'",
 ]
